<resources>
    <string name="app_name">AzLock</string>
    <string name="select_device">Select a device</string>
    <string name="scanning">Scanning...</string>
    <string name="paired">paired</string>
    <string name="popup_title">Quit azLock?</string>
    <string name="popup_message">Do you want to quit this application?</string>
    <string name="popup_yes">YES</string>
    <string name="popup_no">NO</string>
    <string name="ble_not_supported">Bluetooth Low Energy not supported</string>
    <string name="LacertaSettings">Settings</string>
    <string name="LacertaChangeDevice">Change Door</string>
    <string name="LacertaDelete">Delete</string>
    <string name="LacertaDevice">Device</string>
    <string name="LacertaDoorName">azLock</string>
    <string name="LacertaAbout">About</string>
    <string name="LacertaConfirmPIN">Confirm PIN</string>
    <string name="LacertaPIN">Enter PIN for security</string>
    <string name="LacertaHistory">History</string>
    <string name="LacertaLog">Log</string>
    <string name="LacertaGuests">Guests</string>
    <string name="LacertaCopyrightText">© Copyright 2017</string>
    <string name="LacertaCopyrightDetailText">Asiczen Technologies India Private Limited</string>
    <string name="LacertaLikeusText">Visit us </string>
    <string name="LacertaSsid">Router SSID</string>
    <string name="LacertaPasswd">Password</string>
    <string name="LacertaGuide">Guide</string>
    <string name="TutorialIntroText">
        This tutorial takes about two minutes. You will get much more out of azLock if you read it.
    </string>
    <string name="ThreeDotsOption">
        The "Three Dots" main menu contains general features like Guests, History of Lock Access,
        Edit user profile, change pin, Change Door.
    </string>
    <string name="SettingsOption">
        Tap to open the app.It shows AZLOCK welcome screen and automatically redirect to “SET PIN”
        page after 2 seconds.
    </string>
    <string name="err_msg_name">Enter your full name</string>
    <string name="err_msg_door_name">Enter door name</string>
    <string name="err_msg_email">Enter valid email address</string>
    <string name="err_msg_password">Enter the password</string>
    <string name="err_msg_pin_empty">PIN cannot be empty</string>
    <string name="err_msg_pin_length">PIN length must be 4</string>
    <string name="err_msg_pin_pattern">PIN must contains number only</string>
    <string name="change_pin">Change Pin</string>
    <string name="saved_networks">Saved Networks</string>
    <string name="key">Key</string>
    <string name="configure_bridge">Configure bridge</string>
    <string name="ask_pin">Ask Pin</string>
    <string name="facebook_circle">facebook_circle</string>
    <string name="google_plus_imagebutton">google_plus_imageButton</string>
    <string name="youtube_imageview">youtube_imageView</string>
    <string name="photo_imageview">photo_imageView</string>
    <string name="battery_imageview">battery_imageView</string>
    <string name="btn_date">btn date</string>
    <string name="todo">TODO</string>
    <string name="bluetooth_image">bluetooth image</string>
    <string name="wifi_image">wifi image</string>
    <string name="guest_image">guest image</string>
    <string name="logo">logo</string>
    <string name="qr_image">qr image</string>
    <string name="warning">warning</string>
    <string name="user">user</string>
    <string name="version">Version</string>
    <string name="bridge_id">Bridge Id</string>
    <string name="plus">+</string>
    <string name="current_password">Current Password</string>
    <string name="new_password">New Password</string>
    <string name="change_password">Change Password</string>
    <string name="ok">OK</string>
    <string name="log_in">Log in</string>
    <string name="new_user_new_registration">New User? New Registration</string>
    <string name="forgot_password">Forgot Password</string>
    <string name="_22">22%</string>
    <string name="lock_mac">Lock Mac</string>
    <string name="contact_number">Contact number</string>
    <string name="issue">Issue</string>
    <string name="description">Description</string>
    <string name="submit">Submit</string>
    <string name="please_add_atleast_one_bridge_id">Please add atleast one bridge id</string>
    <string name="please_click_on_the_device_for_router_configuration_if_your_wifi_is_not_shown_in_the_list_then_click_on_the_hidden_network">Please select a wifi that will give internet access to your bridge.If your wifi is not shown in the list then click on the Hidden network</string>
    <string name="hidden_network">Hidden network</string>
    <string name="wif_list">Wif List</string>
    <string name="name">Name</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="re_enter_password">Re-enter Password</string>
    <string name="secret_question1">Secret Question1</string>
    <string name="secret_answer1">Secret Answer1</string>
    <string name="secret_question2">Secret Question2</string>
    <string name="secret_answer2">Secret Answer2</string>
    <string name="enter_your_dob">Enter Your DOB</string>
    <string name="yyyy_mm_dd">YYYY-MM-DD</string>
    <string name="create_account">Create Account</string>
    <string name="already_a_member_login">Already a member? Login</string>
    <string name="enter_mac">Enter MAC</string>
    <string name="enter_ssid">Enter SSID</string>
    <string name="azlock_requires_permission_to_access_your_content_which_makes_everything_easier">azLock requires permission to access your content, which makes everything easier.</string>
    <string name="turn_on">Turn On</string>
    <string name="_continue">Continue</string>
    <string name="reset_lock">Reset Lock</string>
    <string name="enter_password">Enter password</string>
    <string name="delete_all_logs">Delete all logs</string>
    <string name="confirm_to_change_owner">Confirm to change owner</string>
    <string name="this_action_will_remove_your_ownership_from_this_device">** This action will remove your ownership from this device.</string>
    <string name="delete_selected_guests">Delete selected guests</string>
    <string name="azlock">azLock</string>
    <string name="_12_43_21_65_ff">12:43:21:65:FF</string>
    <string name="next">Next</string>
    <string name="enter_dob">Enter Dob:</string>
    <string name="dob">D.O.B</string>
    <string name="add_lock">Add Lock</string>
    <string name="cancel">Cancel</string>
    <string name="delete_lock">Delete Lock</string>
    <string name="lock_sound">Lock Sound</string>
    <string name="shake">Shake</string>
    <string name="bridge_registration">Bridge Registration</string>
    <string name="login">Login</string>
    <string name="static_bridge">Static bridge</string>
    <string name="add_bridge">Add Bridge</string>
    <string name="start_time">Start Time</string>
    <string name="end_time">End Time</string>
    <string name="delete_networks">Delete Networks</string>
    <string name="enter_secret_answer_2">Enter secret answer 2</string>
    <string name="secret_answer">Secret Answer</string>
    <string name="enter_secret_question_1">Enter secret question 1</string>
    <string name="enter_secret_question_2">Enter secret question 2</string>
    <string name="enter_mobile_no">Enter Mobile No.</string>
    <string name="somnath_kayal">Somnath Kayal</string>
    <string name="ab_bc_12_31_0b_aa">ab:bc:12:31:0b:aa</string>
    <string name="limited_time">Limited Time</string>
    <string name="from">From:</string>
    <string name="_13_july_2015_t_t2_15_pm">13 July, 2015\t\t2:15 PM</string>
    <string name="to">To:</string>
    <string name="reset_code">Reset Code</string>
    <string name="reset">Reset</string>
    <string name="reset_code_verification">Reset Code Verification:</string>
    <string name="enter_secret_answer_1">Enter secret answer 1</string>
    <string name="connect_automatically">Connect Automatically</string>
    <string name="key_shared">Key Shared</string>
    <string name="delete_all_guests">Delete all guests</string>
    <string name="july_10_2015_10_05_am">July 10, 2015 10:05 AM</string>
    <string name="introduction">Introduction</string>
    <string name="t25_january_2016_t_t10_09_am">\t25 January, 2016\t\t10:09 AM</string>
    <string name="register">Register</string>
    <string name="register_1">Register</string>
    <string name="row_item">Row Item</string>
    <string name="guest_id">Guest ID</string>
    <string name="access_type">Access Type</string>
    <string name="access_time">Access Time</string>
    <string name="enter_valid_password">Enter valid password</string>
    <string name="bridge_ssid">Bridge SSID</string>
    <string name="no_data_found">No data Found</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="door_name">Door name</string>
    <string name="guest_name">Guest Name</string>
    <string name="pin">PIN</string>
    <string name="bridge_mac">Bridge mac :</string>
    <string name="copy">Copy</string>
    <string name="before_doing_any_operation_please_configure_the_router">Before doing any operation please Configure the Router.</string>
    <string name="ask_pin_everytime">Ask pin everytime</string>
    <string name="fields_cannot_be_empty">Fields cannot be empty</string>
    <string name="bluetooth">Bluetooth</string>
    <string name="internet">Internet</string>
    <string name="select_all">Select All</string>
    <string name="done">Done</string>
    <string name="all_guests">All Guests</string>
    <string name="active_guests">Active Guests</string>
    <string name="expired_guests">Expired Guests</string>
    <string name="search">Search</string>
    <string name="refresh">Refresh</string>
    <string name="appearance">Appearance</string>
    <string name="july_8_2015">July 8, 2015</string>
    <string name="welcome">Welcome</string>
    <string name="swipe_left_to_see_complete_tutorial">Swipe left to see complete tutorial.</string>
    <string name="support">Support</string>
    <string name="request_access">REQUEST ACCESS</string>
    <string name="you_are_not_registered">You are not registered</string>
    <string name="message_body_can_t_be_empty">** Message body can\'t be empty</string>
    <string name="select_access_type">Select Access Type</string>
    <string name="owner_name">Owner Name</string>
    <string name="registering">Registering...</string>
    <string name="_12_43_21_65_ff1">12:43:21:65:FF</string>
    <string name="router_ip">Router IP</string>
    <string name="router_port">Router Port</string>
    <string name="no_networks_found">No Networks Found</string>
    <string name="mobile_no_e_g_9903198189">Mobile No. (e.g. 9903198189)</string>
    <string name="add_network">Add Network</string>
    <string name="delete_network">Delete Network</string>
    <string name="show_mac">Show MAC</string>
    <string name="no_device_found">No device Found</string>
    <string name="guest">Guest</string>
    <string name="owner">Owner</string>
    <string name="connecting">Connecting...</string>
    <string name="changin_bridgeid">Bridge registration\nGive a name to your bridge.</string>
    <string name="port_wrong">Port or address may be wrong.</string>
    <string name="key_">Key -</string>
    <string name="please_wait">Please wait! This may take a moment.</string>
    <string name="config_bridge">Config_bridge</string>
    <string name="enter_the_registered_email_id">Enter The Registered Email Id.</string>
    <string name="enter_reset_code">Enter Reset Code</string>
    <string name="settings">Settings</string>
    <string name="guide">Guide</string>
    <string name="about">About</string>
    <string name="videos">Videos</string>
    <string name="consult_with_experienced_physiotherapist">Consult with experienced physiotherapist</string>
    <string name="hi">HI</string>
</resources>