<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android" >
    <group android:checkableBehavior="single"
        android:id="@+id/my_id">
        <item
            android:id="@+id/nav_settings"
            android:icon="@drawable/ic_settings_1"
            android:title="@string/settings"/>
        <item
            android:id="@+id/nav_key"
            android:icon="@drawable/ic_key"
            android:title="@string/key" />
        <item
            android:id="@+id/nav_guide"
            android:icon="@drawable/guide"
            android:title="@string/guide" />
        <item
            android:id="@+id/nav_about"
            android:icon="@drawable/ic_about_us"
            android:title="@string/about" />
        <item
            android:id="@+id/nav_support"
            android:icon="@drawable/ic_support"
            android:title="@string/support" />
        <item
            android:id="@+id/nav_youtube"
            android:icon="@drawable/ic_youtube"
            android:title="@string/videos" />
    </group>
</menu>