<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <!--<item
        android:id="@+id/miActionProgress"
        android:title="Scanning..."
        android:visible="true"
        android:menuCategory="container"
        app:showAsAction="always"
        app:actionLayout="@layout/action_view_progress" />-->
    <item android:id="@+id/add_network"
        android:title="@string/add_network"
        app:showAsAction="never" />
    <item android:id="@+id/delete_network"
        android:title="@string/delete_network"
        app:showAsAction="never" />
    <item android:id="@+id/show_mac"
        android:title="@string/show_mac"
        app:showAsAction="never" />
    <item android:id="@+id/About"
        android:title="@string/LacertaAbout"
        android:orderInCategory="100"/>
    <item android:id="@+id/Guide"
        android:title="@string/LacertaGuide"
        android:orderInCategory="100"/>
</menu>