<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item android:id="@+id/search"
        android:title="@string/search"
        android:icon="@mipmap/ic_search"
        app:showAsAction="always"
        app:actionViewClass="androidx.appcompat.widget.SearchView" />
    <item android:id="@+id/Refresh"
        android:title="@string/refresh"
        android:icon="@mipmap/ic_refresh_white_24dp"
        android:orderInCategory="100"
        app:showAsAction="collapseActionView|ifRoom"/>
    <item android:id="@+id/appearance"
        android:title="@string/appearance"
        android:orderInCategory="100"/>
    <!--<item android:id="@+id/Filter"
        android:title="Filter"
        android:orderInCategory="100"/>-->

</menu>