<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/menu_select_all"
        android:orderInCategory="100"
        app:showAsAction="ifRoom|withText"
        android:title="@string/select_all"
        android:icon="@mipmap/ic_select_all_white_24dp"/>
    <item
        android:id="@+id/menu_log"
        android:orderInCategory="100"
        app:showAsAction="ifRoom|withText"
        android:title="@string/LacertaLog"
        android:icon="@mipmap/ic_dashboard_white_24dp"/>
    <item
        android:id="@+id/menu_delete"
        android:orderInCategory="100"
        app:showAsAction="ifRoom|withText"
        android:title="@string/LacertaDelete"
        android:icon="@mipmap/ic_delete_white_24dp"/>

</menu>