<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:orientation="horizontal"
        android:background="@color/colorPrimary">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="@string/azlock"
            android:textColor="@color/white"
            android:layout_marginStart="10dp"
            android:layout_gravity="center_vertical"
            android:id="@+id/ap_ssid_textView" />
    </LinearLayout>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/password"
        android:layout_marginStart="10dp"
        android:layout_marginTop="10dp"
        android:id="@+id/textView" />

    <EditText
        android:hint="@string/enter_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textPassword"
        android:ems="10"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"
        android:id="@+id/ap_password_editText" />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/enter_valid_password"
        android:layout_gravity="center_horizontal"
        android:id="@+id/error_paswd_textView"
        android:visibility="gone"
        android:textColor="@color/red"/>

    <CheckBox
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/connect_automatically"
        android:layout_marginStart="10dp"
        android:layout_marginTop="5dp"
        android:id="@+id/connect_checkBox" />

</LinearLayout>
