<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@mipmap/login_register_1"
    android:orientation="vertical">
    <TextView
        android:layout_marginTop="100dp"
        android:layout_marginStart="20dp"
        android:id="@+id/textView5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="22sp"
        android:textColor="@color/gray"
        android:text="@string/enter_the_registered_email_id"/>
    <EditText
        android:id="@+id/input_email"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:layout_marginBottom="8dp"
        android:layout_marginTop="40dp"
        android:background="@drawable/input_field"
        android:ems="10"
        android:hint="@string/email"
        android:inputType="textEmailAddress"
        android:textColorHint="@color/gray" />

    <Button
        android:id="@+id/button3"
        android:layout_width="120dp"
        android:layout_height="40dp"
        android:layout_marginTop="10dp"
        android:background="@drawable/button"
        android:clickable="true"
        android:focusable="true"
        android:text="@string/ok"
        android:textColor="@android:color/white"
        android:textSize="18sp"
        android:layout_marginStart="20dp"
        />

    <TextView
        android:id="@+id/login"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="end"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="20dp"
        android:text="@string/already_a_member_login"
        android:textColor="@color/green"
        android:textSize="16sp" />


</LinearLayout>
