<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent" android:layout_height="60dp">

    <ImageView
        android:contentDescription="@string/guest_image"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/guest_imageView"
        android:src="@mipmap/ic_user_"
        android:layout_centerVertical="true"
        android:layout_marginStart="16dp"
        />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/guest_name"
        android:id="@+id/guestName_textView"
        android:scrollbars="horizontal"
        android:layout_marginTop="8dp"
        android:layout_marginStart="86dp"
        android:textColor="@color/black"
        />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:text="@string/key_shared"
        android:layout_marginTop="35dp"
        android:layout_marginStart="86dp"
        android:id="@+id/key_status_textView" />
</RelativeLayout>
