<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    android:id="@+id/main_layout"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <TextView
        android:layout_marginBottom="50dp"
        android:layout_centerHorizontal="true"
        android:gravity="center"
        android:textColor="@color/backgroundColor"
        android:id="@+id/slider_heading"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="20sp"
        android:text="@string/consult_with_experienced_physiotherapist"
        android:layout_above="@+id/slider_image"
        />

    <ImageView
        android:id="@+id/slider_image"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:layout_centerInParent="true"
        android:layout_centerVertical="true"
        app:srcCompat="@drawable/ic_lock_add"
        android:contentDescription="@string/todo" />



    <TextView
        android:gravity="center"
        android:textColor="@color/backgroundColor"
        android:layout_below="@+id/slider_image"
        android:id="@+id/slider_desc"
        android:textSize="16sp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="50dp"
        android:text="@string/hi" />
</RelativeLayout>